# rtspcam

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Callback.hpp  Common.hpp  DeviceHandle.hpp  ServerHandle.hpp
src/: Callback.cpp  DeviceHandle.cpp  ServerHandle.cpp
